# HAlign-4

./: .gitignore  CMakeLists.txt  README.md  main.cpp
PairwiseAlignment/: ViralPairwiseAlignment.cpp  ViralPairwiseAlignment.hpp
Utils/: Arguments.cpp  Arguments.hpp  CommandLine.hpp  Fasta.cpp  Fasta.hpp  Graph.cpp  Graph.hpp  Insertion.hpp  Pseudo.hpp  Utils.cpp  Utils.hpp
docs/: install.md  test.md  usage.md
include/: align.h  anchor.h  cluster.h  config.hpp  consensus.h  hash.h  mash.h  preprocess.h  seed.h  utils.h
multi-thread/: ThreadPool.cpp  ThreadPool.hpp  ThreadPoolPerThread.cpp  ThreadPoolPerThread.hpp
recipe/: meta.yaml
src/: halign4.cpp
src/align/: align.cpp  cigar.cpp  ref_aligner.cpp
src/consensus/: consensus.cpp  selector.cpp
src/mash/: mash.cpp
src/seed/: anchor.cpp  chain.cpp  minimizer.cpp
src/utils/: cmd.cpp  preprocess.cpp  seq_io.cpp
test/: CMakeLists.txt  run_tests.sh  test_align.cpp  test_anchor.cpp  test_consensus.cpp  test_fasta_writer.cpp  test_generate_consensus.cpp  test_mash.cpp  test_mash_perf.cpp  test_minimizer.cpp  test_read_fasta.cpp
